# RdpCredentialProvider

./: .gitignore  CMakeLists.txt  README.txt  RdpCredentialProvider.sln
RdpCredProv/: CMakeLists.txt  Dll.cpp  Dll.h  RdpCredProv.def  RdpCredential.cpp  RdpCredential.h  RdpProvider.cpp  Register.reg  guid.cpp  guid.h  helpers.h  resources.rc
RdpCredUI/: CMakeLists.txt  RdpCredUI.cpp  RdpCredUI.vcxproj
RdpCredentialProvider/: RdpCredential.cpp  RdpCredential.h  RdpCredentialProvider.def  RdpCredentialProvider.vcxproj  RdpProvider.cpp  RdpProvider.h  Register.reg  Unregister.reg  common.h  helpers.cpp  helpers.h  resources.rc
